--- a/events_app/templates/event_detail.html
+++ b/events_app/templates/event_detail.html
@@ -5,18 +5,17 @@
 <a href="/">Home</a>
 
 <!-- 
-    TODO: Instead of the hard-coded values, use the event object to display the
+    Used the event object to display the
     correct title, description, date, time, and number of guests
 -->
 
-<h1>Zoom Party!</h1>
+<h1>{{ event.title }}</h1>
 
-<p>Come join us for some fun zoom games!</p>
+<p>{{ event.description }}</p>
 
-<p><strong>Date:</strong> Friday March 5, 2021</p>
-<p><strong>Time:</strong> 5:00 PM</p>
+<p><strong>Date and Time:</strong> {{ event.date_and_time }}</p>
 
-<p><strong>Number of Guests:</strong> 5</p>
+<p><strong>Number of Guests: {{ event.guests|length }} Attending.</strong></p>
 
 <form method="POST">
     <fieldset>
@@ -24,7 +23,7 @@
         {% if error %}
             <p class="error">{{ error }}</p>
         {% endif %}
-        <p>
+        <p> 
             <label>
                 Your Name:
                 <input type="text" name="guest_name">
@@ -56,15 +55,13 @@
     </fieldset>
 </form>
 
-<!-- TODO: Display the actual guests attending -->
+<!--Displayed the actual guests attending -->
 
 <h2>Guests Attending:</h2>
 <ul>
-    
-    <li><a href="/guest/1">Meredith</a></li>
-    <li><a href="/guest/2">Dani</a></li>
-    <li><a href="/guest/3">Jordan</a></li>
-    <li><a href="/guest/4">Ducky</a></li>
+    {% for guest in event.guests %}
+    <li><a href="/guest/{{ guest.id }}">{{ guest.name }}</a></li>
+    {% endfor %}
 </ul>
 
 {% endblock %}
